--- a/rtmath/rtmath-apps/ddscat-genparams-qt/frmTarget.ui
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/frmTarget.ui
@@ -1,241 +1,223 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>frmTarget</class>
- <widget class="QWidget" name="frmTarget">
+ <widget class="QDialog" name="frmTarget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>792</width>
-    <height>495</height>
+    <width>747</width>
+    <height>655</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Target Properties</string>
+   <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>774</width>
-     <height>446</height>
-    </rect>
-   </property>
-   <layout class="QFormLayout" name="formLayout">
-    <item row="1" column="0">
-     <widget class="QLabel" name="label">
+  <layout class="QFormLayout" name="formLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>General Target Properties:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QTreeWidget" name="treeConstraints">
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
+     <property name="toolTip">
+      <string/>
+     </property>
+     <property name="statusTip">
+      <string>Specify target dimensions. Range notation (min:lin span:max) accepted. Units required.</string>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
+     <column>
       <property name="text">
-       <string>Target Type:</string>
+       <string>Variable</string>
       </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="cmbTargetType">
-      <item>
-       <property name="text">
-        <string>From Base Shape File</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Ellipsoid</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Hex Plate</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Rectangular Prism</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Column / Needle</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>TMATRIX Ellipsoid</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>TMATRIX Cylinder</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_2">
+     </column>
+     <column>
       <property name="text">
-       <string>Base Shape File:</string>
+       <string>Range</string>
       </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_3">
+     </column>
+     <column>
       <property name="text">
-       <string>Dimension Relations:</string>
+       <string>Units</string>
       </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QComboBox" name="cmbAspectRatio">
-      <property name="enabled">
-       <bool>false</bool>
+     </column>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Target Type:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="cmbTargetType">
+     <item>
+      <property name="text">
+       <string>From Base Shape File</string>
       </property>
-      <item>
-       <property name="text">
-        <string>No relation</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Wyser et al. (1998)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Perturbed Wyser</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Custom</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QTextBrowser" name="textBrowser">
-      <property name="enabled">
-       <bool>false</bool>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ellipsoid</string>
       </property>
-      <property name="html">
-       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+     </item>
+     <item>
+      <property name="text">
+       <string>Hex Plate</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Rectangular Prism</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Column / Needle</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>TMATRIX Ellipsoid</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>TMATRIX Cylinder</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Base Shape File:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QTreeWidget" name="treeShapedat">
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOn</enum>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>File</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Dimension Relations:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QComboBox" name="cmbAspectRatio">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <item>
+      <property name="text">
+       <string>No relation</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Wyser et al. (1998)</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Perturbed Wyser</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Custom</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QTextBrowser" name="textBrowser">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;Relation info goes here...&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QTreeWidget" name="treeConstraints">
-      <property name="contextMenuPolicy">
-       <enum>Qt::CustomContextMenu</enum>
-      </property>
-      <property name="toolTip">
-       <string/>
-      </property>
-      <property name="statusTip">
-       <string>Specify target dimensions. Range notation (min:lin span:max) accepted. Units required.</string>
-      </property>
-      <property name="alternatingRowColors">
-       <bool>true</bool>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::ExtendedSelection</enum>
-      </property>
-      <column>
-       <property name="text">
-        <string>Variable</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Cantarell'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2'; font-size:8pt;&quot;&gt;Relation info goes here...&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMinAndMaxSize</enum>
+     </property>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Range</string>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
        </property>
-      </column>
-      <column>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cmdOK">
        <property name="text">
-        <string>Units</string>
+        <string>OK</string>
        </property>
-      </column>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>General Target Properties:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QTreeWidget" name="treeShapedat">
-      <property name="contextMenuPolicy">
-       <enum>Qt::CustomContextMenu</enum>
-      </property>
-      <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOn</enum>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::ExtendedSelection</enum>
-      </property>
-      <attribute name="headerVisible">
-       <bool>false</bool>
-      </attribute>
-      <column>
+       <property name="autoDefault">
+        <bool>true</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cmdCancel">
        <property name="text">
-        <string>File</string>
+        <string>Cancel</string>
        </property>
-      </column>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>461</y>
-     <width>204</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
-    <property name="sizeConstraint">
-     <enum>QLayout::SetMinAndMaxSize</enum>
-    </property>
-    <item>
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item>
-     <widget class="QPushButton" name="cmdOK">
-      <property name="text">
-       <string>OK</string>
-      </property>
-      <property name="autoDefault">
-       <bool>true</bool>
-      </property>
-      <property name="default">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="cmdCancel">
-      <property name="text">
-       <string>Cancel</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections>
@@ -246,12 +228,12 @@ p, li { white-space: pre-wrap; }
    <slot>editTreeItem(QTreeWidgetItem*,int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>462</x>
-     <y>72</y>
+     <x>465</x>
+     <y>94</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
@@ -262,12 +244,12 @@ p, li { white-space: pre-wrap; }
    <slot>menuTargetProps(QPoint)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>462</x>
-     <y>72</y>
+     <x>465</x>
+     <y>94</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
@@ -278,12 +260,12 @@ p, li { white-space: pre-wrap; }
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>455</x>
-     <y>462</y>
+     <x>694</x>
+     <y>629</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
@@ -294,12 +276,12 @@ p, li { white-space: pre-wrap; }
    <slot>editTreeItem(QTreeWidgetItem*,int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>462</x>
-     <y>231</y>
+     <x>465</x>
+     <y>307</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
@@ -310,12 +292,12 @@ p, li { white-space: pre-wrap; }
    <slot>menuShapeDatProps(QPoint)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>462</x>
-     <y>231</y>
+     <x>465</x>
+     <y>307</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
@@ -326,12 +308,12 @@ p, li { white-space: pre-wrap; }
    <slot>targetTypeChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>462</x>
-     <y>152</y>
+     <x>465</x>
+     <y>201</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
@@ -342,12 +324,12 @@ p, li { white-space: pre-wrap; }
    <slot>processOK()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>93</x>
-     <y>473</y>
+     <x>603</x>
+     <y>629</y>
     </hint>
     <hint type="destinationlabel">
-     <x>395</x>
-     <y>247</y>
+     <x>373</x>
+     <y>327</y>
     </hint>
    </hints>
   </connection>
